errorprone: fix most warnings